<resources>
    <string name="app_name">Timetable App</string>
    <string name="_6_am">6 AM</string>
    <string name="su">Su</string>
    <string name="sa">Sa</string>
    <string name="fr">Fr</string>
    <string name="th">Th</string>
    <string name="tu">Tu</string>
    <string name="mo">Mo</string>
    <string name="we">We</string>
    <string name="_7_am">7 AM</string>
    <string name="_8_am">8 AM</string>
    <string name="_9_am">9 AM</string>
    <string name="_10_am">10 AM</string>
    <string name="_11_am">11 AM</string>
    <string name="_12_pm">12 PM</string>
    <string name="_1_pm">1 PM</string>
    <string name="_2_pm">2 PM</string>
    <string name="_3_pm">3 PM</string>
    <string name="_4_pm">4 PM</string>
    <string name="_5_pm">5 PM</string>
    <string name="_6_pm">6 PM</string>
    <string name="_7_pm">7 PM</string>
    <string name="_8_pm">8 PM</string>
    <string name="_9_pm">9 PM</string>
    <string name="_10_pm">10 PM</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="starting_time">Starting Time</string>
    <string name="button">Button</string>
    <string name="duration">Duration</string>
    <string name="_30_mins">30 mins</string>
    <string name="_1_hour">1 hour</string>
    <string name="_1_hour_30_mins">1 hour 30 mins</string>
    <string name="_2_hours">2 hours</string>
    <string name="_2_hours_30_mins">2 hours 30 mins</string>
    <string name="_3_hours">3 hours</string>
    <string name="color_code">Color code</string>
    <string name="pick_a_color">Pick a color</string>
    <string name="create">Create</string>
    <string name="textview">TextView</string>
    <string name="day">Day</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="gym_tuition">Gym, Tuition ...</string>

    <string-array name="duration">
        <item>30 mins</item>
        <item>1 hour</item>
        <item>1 hour and 30 mins</item>
        <item>2 hours</item>
        <item>2 hours and 30 mins</item>
        <item>3 hours</item>
    </string-array>

    <string-array name="day">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
</resources>
