<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button72"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintEnd_toStartOf="@+id/button73"
        tools:layout_editor_absoluteY="159dp" />

    <Button
        android:id="@+id/button73"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintEnd_toStartOf="@+id/button57"
        tools:layout_editor_absoluteY="159dp" />

    <Button
        android:id="@+id/button74"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintEnd_toStartOf="@+id/button72"
        tools:layout_editor_absoluteY="159dp" />

    <Button
        android:id="@+id/button32"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button77"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button28"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button75"
        app:layout_constraintEnd_toStartOf="@+id/button30" />

    <Button
        android:id="@+id/button29"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button72"
        app:layout_constraintEnd_toStartOf="@+id/button33" />

    <Button
        android:id="@+id/button30"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button76"
        app:layout_constraintEnd_toStartOf="@+id/button32" />

    <Button
        android:id="@+id/button31"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button74"
        app:layout_constraintEnd_toStartOf="@+id/button29" />

    <Button
        android:id="@+id/button34"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button57"
        app:layout_constraintEnd_toStartOf="@+id/button28" />

    <Button
        android:id="@+id/button33"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button73"
        app:layout_constraintEnd_toStartOf="@+id/button34" />

    <Button
        android:id="@+id/button24"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button31"
        app:layout_constraintEnd_toStartOf="@+id/button22" />

    <Button
        android:id="@+id/button22"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button29"
        app:layout_constraintEnd_toStartOf="@+id/button26" />

    <Button
        android:id="@+id/button23"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button30"
        app:layout_constraintEnd_toStartOf="@+id/button25" />

    <Button
        android:id="@+id/button25"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button32"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button26"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button33"
        app:layout_constraintEnd_toStartOf="@+id/button27" />

    <Button
        android:id="@+id/button27"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button34"
        app:layout_constraintEnd_toStartOf="@+id/button21" />

    <Button
        android:id="@+id/button21"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button28"
        app:layout_constraintEnd_toStartOf="@+id/button23" />

    <Button
        android:id="@+id/button8"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button24"
        app:layout_constraintEnd_toStartOf="@+id/button09" />

    <Button
        android:id="@+id/button14"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button21"
        app:layout_constraintEnd_toStartOf="@+id/button16" />

    <Button
        android:id="@+id/button09"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button22"
        app:layout_constraintEnd_toStartOf="@+id/button10" />

    <Button
        android:id="@+id/button16"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button23"
        app:layout_constraintEnd_toStartOf="@+id/button18" />

    <Button
        android:id="@+id/button10"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button26"
        app:layout_constraintEnd_toStartOf="@+id/button11" />

    <Button
        android:id="@+id/button11"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button27"
        app:layout_constraintEnd_toStartOf="@+id/button14" />

    <Button
        android:id="@+id/button18"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button25"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/su"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="@+id/button1"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sa"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="15dp"
        android:layout_height="22dp"
        android:text="@string/fr"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/th"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tu"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mo"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintEnd_toStartOf="@+id/button7" />

    <Button
        android:id="@+id/button7"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/button5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toTopOf="@+id/button09"
        app:layout_constraintEnd_toStartOf="@+id/button3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6_am"
        app:layout_constraintBottom_toBottomOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7_am"
        app:layout_constraintBottom_toBottomOf="@+id/button31"
        app:layout_constraintEnd_toStartOf="@+id/button24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button24" />

    <Button
        android:id="@+id/button57"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintEnd_toStartOf="@+id/button75"
        tools:layout_editor_absoluteY="159dp" />

    <Button
        android:id="@+id/button75"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintEnd_toStartOf="@+id/button76"
        tools:layout_editor_absoluteY="159dp" />

    <Button
        android:id="@+id/button76"
        android:layout_width="50dp"
        android:layout_height="25dp"
        app:layout_constraintEnd_toStartOf="@+id/button77"
        tools:layout_editor_absoluteY="159dp" />

    <Button
        android:id="@+id/button77"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button37"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button37"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="184dp" />
</android.support.constraint.ConstraintLayout>